# lignum-rust-gedcom

./: Cargo.toml  meson.build
src/: bin.rs  ffi.rs  lib.rs  parser.rs  tokenizer.rs
src/types/: event.rs
